// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination Should render next as disabled 1`] = `
<div>
  <ul
    class="undefined justify-content-center align-items-center pagination"
  >
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/?page=9"
      >
        <span
          aria-hidden="true"
        >
          Previous
        </span>
        <span
          class="sr-only"
        >
          Previous
        </span>
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/?page=1"
      >
        1
      </a>
    </li>
    <li
      class="page-item disabled"
    >
      <span
        class="page-link"
        disabled=""
      >
        <span
          aria-hidden="true"
        >
          …
        </span>
        <span
          class="sr-only"
        >
          More
        </span>
      </span>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/?page=8"
      >
        8
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/?page=9"
      >
        9
      </a>
    </li>
    <li
      class="page-item active"
    >
      <span
        class="page-link"
        href="/?page=10"
      >
        10
        <span
          class="sr-only"
        >
          (current)
        </span>
      </span>
    </li>
    <li
      class="page-item disabled"
    >
      <span
        class="page-link"
        disabled=""
        href="/?page=11"
      >
        <span
          aria-hidden="true"
        >
          Next
        </span>
        <span
          class="sr-only"
        >
          Next
        </span>
      </span>
    </li>
  </ul>
</div>
`;

exports[`Pagination Should render pages in between 1`] = `
<div>
  <ul
    class="undefined justify-content-center align-items-center pagination"
  >
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/?page=3"
      >
        <span
          aria-hidden="true"
        >
          Previous
        </span>
        <span
          class="sr-only"
        >
          Previous
        </span>
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/?page=1"
      >
        1
      </a>
    </li>
    <li
      class="page-item disabled"
    >
      <span
        class="page-link"
        disabled=""
      >
        <span
          aria-hidden="true"
        >
          …
        </span>
        <span
          class="sr-only"
        >
          More
        </span>
      </span>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/?page=2"
      >
        2
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/?page=3"
      >
        3
      </a>
    </li>
    <li
      class="page-item active"
    >
      <span
        class="page-link"
        href="/?page=4"
      >
        4
        <span
          class="sr-only"
        >
          (current)
        </span>
      </span>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/?page=5"
      >
        5
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/?page=6"
      >
        6
      </a>
    </li>
    <li
      class="page-item disabled"
    >
      <span
        class="page-link"
        disabled=""
      >
        <span
          aria-hidden="true"
        >
          …
        </span>
        <span
          class="sr-only"
        >
          More
        </span>
      </span>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/?page=10"
      >
        10
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/?page=5"
      >
        <span
          aria-hidden="true"
        >
          Next
        </span>
        <span
          class="sr-only"
        >
          Next
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Pagination Should render previous as disabled 1`] = `
<div>
  <ul
    class="undefined justify-content-center align-items-center pagination"
  >
    <li
      class="page-item disabled"
    >
      <span
        class="page-link"
        disabled=""
        href="/?page=0"
      >
        <span
          aria-hidden="true"
        >
          Previous
        </span>
        <span
          class="sr-only"
        >
          Previous
        </span>
      </span>
    </li>
    <li
      class="page-item active"
    >
      <span
        class="page-link"
        href="/?page=1"
      >
        1
        <span
          class="sr-only"
        >
          (current)
        </span>
      </span>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/?page=2"
      >
        2
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/?page=3"
      >
        3
      </a>
    </li>
    <li
      class="page-item disabled"
    >
      <span
        class="page-link"
        disabled=""
      >
        <span
          aria-hidden="true"
        >
          …
        </span>
        <span
          class="sr-only"
        >
          More
        </span>
      </span>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/?page=10"
      >
        10
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/?page=2"
      >
        <span
          aria-hidden="true"
        >
          Next
        </span>
        <span
          class="sr-only"
        >
          Next
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Pagination Should render with no ellipsis at end when page greater than 7 1`] = `
<div>
  <ul
    class="undefined justify-content-center align-items-center pagination"
  >
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/?page=7"
      >
        <span
          aria-hidden="true"
        >
          Previous
        </span>
        <span
          class="sr-only"
        >
          Previous
        </span>
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/?page=1"
      >
        1
      </a>
    </li>
    <li
      class="page-item disabled"
    >
      <span
        class="page-link"
        disabled=""
      >
        <span
          aria-hidden="true"
        >
          …
        </span>
        <span
          class="sr-only"
        >
          More
        </span>
      </span>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/?page=6"
      >
        6
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/?page=7"
      >
        7
      </a>
    </li>
    <li
      class="page-item active"
    >
      <span
        class="page-link"
        href="/?page=8"
      >
        8
        <span
          class="sr-only"
        >
          (current)
        </span>
      </span>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/?page=9"
      >
        9
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/?page=10"
      >
        10
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/?page=9"
      >
        <span
          aria-hidden="true"
        >
          Next
        </span>
        <span
          class="sr-only"
        >
          Next
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Pagination Should render with no ellipsis at start when page less than 3 1`] = `
<div>
  <ul
    class="undefined justify-content-center align-items-center pagination"
  >
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/?page=2"
      >
        <span
          aria-hidden="true"
        >
          Previous
        </span>
        <span
          class="sr-only"
        >
          Previous
        </span>
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/?page=1"
      >
        1
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/?page=2"
      >
        2
      </a>
    </li>
    <li
      class="page-item active"
    >
      <span
        class="page-link"
        href="/?page=3"
      >
        3
        <span
          class="sr-only"
        >
          (current)
        </span>
      </span>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/?page=4"
      >
        4
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/?page=5"
      >
        5
      </a>
    </li>
    <li
      class="page-item disabled"
    >
      <span
        class="page-link"
        disabled=""
      >
        <span
          aria-hidden="true"
        >
          …
        </span>
        <span
          class="sr-only"
        >
          More
        </span>
      </span>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/?page=10"
      >
        10
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        href="/?page=4"
      >
        <span
          aria-hidden="true"
        >
          Next
        </span>
        <span
          class="sr-only"
        >
          Next
        </span>
      </a>
    </li>
  </ul>
</div>
`;
